--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@
   max-width: 50%;
   height: auto;
 }
+ @font-face {
+  font-family: tahoma;
+  src: url(tahoma.woff);
+}
+
+body {
+  font-family: myFirstFont;
+}
