--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
   height: auto;
 }
  @font-face {
-  font-family: tahoma;
-  src: url(tahoma.woff);
+  font-family: Yekan;
+  src: url(https://github.com/ParsMizban/Yekan-Font/blob/master/Yekan.woff);
 }
 
 body {
-  font-family: tahoma;
+  font-family: Yekan;
 }
