--- a/style.css
+++ b/style.css
@@ -2,21 +2,21 @@
  font-family: Vazir;
  font-style: normal;
  font-weight: normal;
- src: url('fonts/Vazir.eot');
- src: url('fonts/Vazir.eot?#iefix') format('embedded-opentype'), 
- url('fonts/Vazir.woff2') format('woff2'), 
- url('fonts/Vazir.woff') format('woff'), 
- url('fonts/Vazir.ttf') format('truetype');
+ src: url('https://lovearth.info/fonts/Vazir.eot');
+ src: url('https://lovearth.info/fonts/Vazir.eot?#iefix') format('embedded-opentype'), 
+ url('https://lovearth.info/fonts/Vazir.woff2') format('woff2'), 
+ url('https://lovearth.info/fonts/Vazir.woff') format('woff'), 
+ url('https://lovearth.info/fonts/Vazir.ttf') format('truetype');
 }
 @font-face {
  font-family: Vazir;
  font-style: normal;
  font-weight: bold;
- src: url('fonts/Vazir-Bold.eot');
- src: url('fonts/Vazir-Bold.eot?#iefix') format('embedded-opentype'), 
- url('fonts/Vazir-Bold.woff2') format('woff2'), 
- url('fonts/Vazir-Bold.woff') format('woff'), 
- url('fonts/Vazir-Bold.ttf') format('truetype');
+ src: url('https://lovearth.info/fonts/Vazir-Bold.eot');
+ src: url('https://lovearth.info/fonts/Vazir-Bold.eot?#iefix') format('embedded-opentype'), 
+ url('https://lovearth.info/fonts/Vazir-Bold.woff2') format('woff2'), 
+ url('https://lovearth.info/fonts/Vazir-Bold.woff') format('woff'), 
+ url('https://lovearth.info/fonts/Vazir-Bold.ttf') format('truetype');
 }
  
  
