--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
  
  
-body{
-font-family: 'Vazir', Arial, sans-serif;
+div , body{
+font-family: "Vazir", Arial, sans-serif !important;
 font-weight:normal;
 }
