--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,8 @@ div , body{
 font-family: "Vazir", Arial, sans-serif !important;
 font-weight:normal;
 }
+
+.responsive {
+  max-width: 100%;
+  height: auto;
+}
