--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,13 @@ font-weight:normal;
   max-width: 100%;
   height: auto;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
