--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,9 @@ font-weight:normal;
   color: white;
   text-align: center;
 }
+
+.center {
+  padding: 70px 0;
+  border: 3px solid green;
+  text-align: center;
+}
