--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,8 @@ font-weight:normal;
   text-align: center;
 }
 
-.center {
-  padding: 70px 0;
-  border: 3px solid green;
-  text-align: center;
+q{
+  background-color: #f2f2f2;
+  padding: 5px 10px;
+  border-left: 3px solid #2196F3;
 }
