--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,19 @@ font-weight:normal;
   color: white;
   text-align: center;
 }
+
+a:link {
+    font-family: Tahoma, Geneva, sans-serif;
+    font-size: 12px;
+    color: #06C;
+    text-decoration: none;
+}
+a:visited {
+    color: #C30;
+}
+a:hover {
+    color: #008CC7;
+}
+a:active {
+    background-color: #999;
+}
