--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ a:visited {
     color: #008CC7;
 }
 a:hover {
-    color: #008CC7;
+    color: #000000;
 }
 a:active {
     background-color: #008CC7;
